--- a/packages/core/audio/package.json
+++ b/packages/core/audio/package.json
@@ -1,7 +1,10 @@
 {
   "ngPackage": {
     "lib": {
-      "entryFile": "src/index.ts"
+      "entryFile": "src/index.ts",
+      "umdModuleIds": {
+        "three": "three"
+      }
     }
   }
 }
