feat(core): add Stats

--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -37,7 +37,9 @@
           "packages/core/scene/**/*.ts",
           "packages/core/scene/**/*.html",
           "packages/core/audio/**/*.ts",
-          "packages/core/audio/**/*.html"
+          "packages/core/audio/**/*.html",
+          "packages/core/stats/**/*.ts",
+          "packages/core/stats/**/*.html"
         ]
       }
     }
