--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "@angular-three/core",
+  "name": "@angular-three/controls",
   "version": "0.0.1",
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
     "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@ngrx/component-store": "^12.5.1",
-    "three": "0.134.0"
+    "@angular/core": "^12.2.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
