--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -42,8 +42,8 @@
           "packages/core/stats/**/*.html",
           "packages/core/points/**/*.ts",
           "packages/core/points/**/*.html",
-          "packages/core/mesh/**/*.ts",
-          "packages/core/mesh/**/*.html",
+          "packages/core/meshes/**/*.ts",
+          "packages/core/meshes/**/*.html",
           "packages/core/lod/**/*.ts",
           "packages/core/lod/**/*.html",
           "packages/core/group/**/*.ts",
