--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -45,7 +45,7 @@
       "@angular-three/core/cameras": ["packages/core/cameras/src/index.ts"],
       "@angular-three/core/group": ["packages/core/group/src/index.ts"],
       "@angular-three/core/lod": ["packages/core/lod/src/index.ts"],
-      "@angular-three/core/mesh": ["packages/core/mesh/src/index.ts"],
+      "@angular-three/core/meshes": ["packages/core/meshes/src/index.ts"],
       "@angular-three/core/points": ["packages/core/points/src/index.ts"],
       "@angular-three/core/scene": ["packages/core/scene/src/index.ts"],
       "@angular-three/core/stats": ["packages/core/stats/src/index.ts"]
