feat(postprocessing): add abstract Pass and EffectComposer

--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@angular-three/postprocessing",
   "version": "0.0.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
