--- a/package.json
+++ b/package.json
@@ -36,11 +36,17 @@
     "@nrwl/linter": "13.1.4",
     "@nrwl/tao": "13.1.4",
     "@nrwl/workspace": "13.1.4",
+    "@release-it/bumper": "3.0.1",
+    "@release-it/conventional-changelog": "3.3.0",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/three": "0.134.0",
     "@typescript-eslint/eslint-plugin": "~5.3.1",
     "@typescript-eslint/parser": "~5.3.1",
+    "commitizen": "4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "cz-customizable": "6.3.0",
+    "dotenv-cli": "4.1.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "jest": "27.3.1",
@@ -51,7 +57,13 @@
     "postcss-preset-env": "6.7.0",
     "postcss-url": "10.1.3",
     "prettier": "2.4.1",
+    "release-it": "14.11.7",
     "ts-jest": "27.0.7",
     "typescript": "~4.3.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
