--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "postinstall": "ngcc --properties es2015 browser module main",
     "commit": "git-cz",
     "release": "dotenv release-it --",
+    "contributors:init": "all-contributors init",
+    "contributors:add": "all-contributors add",
     "build": "nx run-many --target=build --all --verbose",
     "publish": "nx run-many --target=publish --all --parallel"
   },
@@ -47,6 +49,7 @@
     "@types/three": "0.134.0",
     "@typescript-eslint/eslint-plugin": "~5.3.1",
     "@typescript-eslint/parser": "~5.3.1",
+    "all-contributors-cli": "6.20.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.3.0",
