--- a/packages/core/curves/package.json
+++ b/packages/core/curves/package.json
@@ -19,7 +19,7 @@
         "three/examples/jsm/curves/DecoratedTorusKnot5a": "three/examples/jsm/curves/DecoratedTorusKnot5a",
         "three/examples/jsm/curves/DecoratedTorusKnot5c": "three/examples/jsm/curves/DecoratedTorusKnot5c",
         "three/examples/jsm/curves/NURBSCurve": "three/examples/jsm/curves/NURBSCurve",
-        "three/examples/jsm/curves/CurveExtras": "three/examples/jsm/curves/CurveExtras",
+        "three/examples/jsm/curves/CurveExtras": "three/examples/jsm/curves/CurveExtras"
         
       }
     }
