--- a/packages/core/materials/package.json
+++ b/packages/core/materials/package.json
@@ -4,7 +4,7 @@
       "entryFile": "src/index.ts",
       "umdModuleIds": {
         "three": "three",
-        "three/examples/jsm/lines/LineMaterial": "three/examples/jsm/lines/LineMaterial",
+        "three/examples/jsm/lines/LineMaterial": "three/examples/jsm/lines/LineMaterial"
         
       }
     }
