feat(cannon): add physics directive (wip)

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
     "@ngrx/component-store": "12.5.1",
+    "cannon-es": "0.18.0",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
     "tslib": "2.3.1",
