--- a/packages/cannon/package.json
+++ b/packages/cannon/package.json
@@ -6,7 +6,8 @@
   },
   "peerDependencies": {
     "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0"
+    "@angular/core": "^12.2.0",
+    "cannon-es": "~0.18.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
