--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/core",
-  "version": "2.0.0",
+  "version": "1.0.0-beta.45",
   "publishConfig": {
     "access": "public"
   },
