--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/postprocessing",
-  "version": "2.0.0",
+  "version": "1.0.0-beta.45",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
