--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -70,6 +70,13 @@
           "packages/core/sprites/**/*.html"
         ]
       }
+    },
+    "publish": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "command": "npm publish",
+        "cwd": "dist/packages/core"
+      }
     }
   },
   "tags": ["scope:core", "type:library"]
