--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,19 +20,34 @@
       "@angular-three/cannon/compound": [
         "packages/cannon/compound/src/index.ts"
       ],
+      "@angular-three/cannon/cone-twist-constraint": [
+        "packages/cannon/cone-twist-constraint/src/index.ts"
+      ],
       "@angular-three/cannon/convex-polyhedron": [
         "packages/cannon/convex-polyhedron/src/index.ts"
       ],
       "@angular-three/cannon/cylinder": [
         "packages/cannon/cylinder/src/index.ts"
       ],
+      "@angular-three/cannon/distance-constraint": [
+        "packages/cannon/distance-constraint/src/index.ts"
+      ],
       "@angular-three/cannon/heightfield": [
         "packages/cannon/heightfield/src/index.ts"
+      ],
+      "@angular-three/cannon/hinge-constraint": [
+        "packages/cannon/hinge-constraint/src/index.ts"
+      ],
+      "@angular-three/cannon/lock-constraint": [
+        "packages/cannon/lock-constraint/src/index.ts"
       ],
       "@angular-three/cannon/particle": [
         "packages/cannon/particle/src/index.ts"
       ],
       "@angular-three/cannon/plane": ["packages/cannon/plane/src/index.ts"],
+      "@angular-three/cannon/point-to-point-constraint": [
+        "packages/cannon/point-to-point-constraint/src/index.ts"
+      ],
       "@angular-three/cannon/sphere": ["packages/cannon/sphere/src/index.ts"],
       "@angular-three/cannon/trimesh": ["packages/cannon/trimesh/src/index.ts"],
       "@angular-three/controls": ["packages/controls/src/index.ts"],
