--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "ngcc --properties es2015 browser module main",
+    "start": "nx serve",
     "commit": "git-cz",
     "release": "dotenv release-it --",
     "contributors:init": "all-contributors init",
@@ -15,6 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "12.2.13",
+    "@angular/cdk": "12.2.3",
     "@angular/common": "12.2.13",
     "@angular/compiler": "12.2.13",
     "@angular/core": "12.2.13",
@@ -23,7 +25,15 @@
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
     "@ngrx/component-store": "12.5.1",
+    "@taiga-ui/addon-doc": "2.23.0",
+    "@taiga-ui/addon-mobile": "2.23.0",
+    "@taiga-ui/cdk": "2.23.0",
+    "@taiga-ui/core": "2.23.0",
+    "@taiga-ui/icons": "2.23.0",
+    "@taiga-ui/kit": "2.23.0",
     "cannon-es": "0.18.0",
+    "ngx-highlightjs": "6.1.0",
+    "ngx-markdown": "12.0.1",
     "nice-color-palettes": "3.0.0",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
@@ -67,6 +77,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-url": "10.1.3",
     "prettier": "2.4.1",
+    "raw-loader": "4.0.2",
     "release-it": "14.11.7",
     "ts-jest": "27.0.7",
     "typescript": "~4.3.5"
