chore: upgrade Nx

--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "release": "dotenv release-it --",
     "contributors:init": "all-contributors init",
     "contributors:add": "all-contributors add",
-    "build": "nx run-many --target=build --all --exclude=docs",
+    "build": "nx run-many --target=build --projects=core,cannon,postprocessing,controls",
     "postbuild": "cp -R packages/cannon/src/lib/utils dist/packages/cannon/fesm2015 & cp -R packages/cannon/src/lib/utils dist/packages/cannon/esm2015/lib",
     "publish": "nx run-many --target=publish --all --parallel"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.13",
-    "@angular/cdk": "12.2.3",
-    "@angular/common": "12.2.13",
-    "@angular/compiler": "12.2.13",
-    "@angular/core": "12.2.13",
-    "@angular/forms": "12.2.13",
-    "@angular/platform-browser": "12.2.13",
-    "@angular/platform-browser-dynamic": "12.2.13",
-    "@angular/router": "12.2.13",
-    "@ngrx/component-store": "12.5.1",
+    "@angular/animations": "13.0.2",
+    "@angular/cdk": "13.0.2",
+    "@angular/common": "13.0.2",
+    "@angular/compiler": "13.0.2",
+    "@angular/core": "13.0.2",
+    "@angular/forms": "13.0.2",
+    "@angular/platform-browser": "13.0.2",
+    "@angular/platform-browser-dynamic": "13.0.2",
+    "@angular/router": "13.0.2",
+    "@ngrx/component-store": "13.0.1",
     "@taiga-ui/addon-doc": "2.23.0",
     "@taiga-ui/addon-mobile": "2.23.0",
     "@taiga-ui/cdk": "2.23.0",
@@ -38,23 +38,23 @@
     "rxjs": "~7.4.0",
     "three": "0.134.0",
     "tslib": "2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.13",
-    "@angular-eslint/eslint-plugin": "~12.6.1",
-    "@angular-eslint/eslint-plugin-template": "~12.6.1",
-    "@angular-eslint/template-parser": "~12.6.1",
-    "@angular/compiler-cli": "12.2.13",
-    "@angular/language-service": "12.2.13",
-    "@nrwl/angular": "13.1.4",
-    "@nrwl/cli": "13.1.4",
-    "@nrwl/devkit": "13.1.4",
-    "@nrwl/eslint-plugin-nx": "13.1.4",
-    "@nrwl/jest": "13.1.4",
-    "@nrwl/linter": "13.1.4",
-    "@nrwl/tao": "13.1.4",
-    "@nrwl/workspace": "13.1.4",
+    "@angular-devkit/build-angular": "13.0.3",
+    "@angular-eslint/eslint-plugin": "12.6.1",
+    "@angular-eslint/eslint-plugin-template": "12.6.1",
+    "@angular-eslint/template-parser": "12.6.1",
+    "@angular/compiler-cli": "13.0.2",
+    "@angular/language-service": "13.0.2",
+    "@nrwl/angular": "13.2.0",
+    "@nrwl/cli": "13.2.0",
+    "@nrwl/devkit": "13.2.0",
+    "@nrwl/eslint-plugin-nx": "13.2.0",
+    "@nrwl/jest": "13.2.0",
+    "@nrwl/linter": "13.2.0",
+    "@nrwl/tao": "13.2.0",
+    "@nrwl/workspace": "13.2.0",
     "@release-it/bumper": "3.0.1",
     "@release-it/conventional-changelog": "3.3.0",
     "@types/jest": "27.0.2",
@@ -70,8 +70,8 @@
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "jest": "27.3.1",
-    "jest-preset-angular": "10.1.0",
-    "ng-packagr": "12.2.5",
+    "jest-preset-angular": "11.0.0",
+    "ng-packagr": "13.0.6",
     "postcss": "8.3.11",
     "postcss-import": "14.0.2",
     "postcss-preset-env": "6.7.0",
@@ -80,7 +80,7 @@
     "raw-loader": "4.0.2",
     "release-it": "14.11.7",
     "ts-jest": "27.0.7",
-    "typescript": "~4.3.5"
+    "typescript": "4.4.4"
   },
   "config": {
     "commitizen": {
