--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nice-color-palettes": "3.0.0",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
+    "three-globe": "2.21.3",
     "tslib": "2.3.1",
     "zone.js": "0.11.4"
   },
