--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rxjs": "~7.4.0",
     "three": "0.134.0",
     "three-globe": "2.21.3",
+    "troika-three-text": "0.44.0",
     "tslib": "2.3.1",
     "zone.js": "0.11.4"
   },
