ci: address misc problem

--- a/packages/soba/package.json
+++ b/packages/soba/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@angular-three/soba",
   "version": "0.0.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^13.0.0",
     "@angular/core": "^13.0.0"
