--- a/.release-it.json
+++ b/.release-it.json
@@ -29,7 +29,8 @@
         "packages/cannon/package*.json",
         "packages/core/package*.json",
         "packages/controls/package*.json",
-        "packages/postprocessing/package*.json"
+        "packages/postprocessing/package*.json",
+        "packages/soba/package*.json"
       ]
     }
   },
