--- a/packages/postprocessing/package.json
+++ b/packages/postprocessing/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@angular-three/postprocessing",
   "version": "2.0.0-beta.3",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^13.0.0",
     "@angular/core": "^13.0.0"
