--- a/packages/soba/package.json
+++ b/packages/soba/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-three/soba",
-  "version": "0.0.1",
+  "version": "2.0.0-beta.4",
   "publishConfig": {
     "access": "public"
   },
