--- a/packages/core/project.json
+++ b/packages/core/project.json
@@ -36,8 +36,6 @@
           "packages/core/src/**/*.html",
           "packages/core/scene/**/*.ts",
           "packages/core/scene/**/*.html",
-          "packages/core/audio/**/*.ts",
-          "packages/core/audio/**/*.html",
           "packages/core/stats/**/*.ts",
           "packages/core/stats/**/*.html",
           "packages/core/points/**/*.ts",
@@ -67,7 +65,9 @@
           "packages/core/lines/**/*.ts",
           "packages/core/lines/**/*.html",
           "packages/core/sprites/**/*.ts",
-          "packages/core/sprites/**/*.html"
+          "packages/core/sprites/**/*.html",
+          "packages/core/audios/**/*.ts",
+          "packages/core/audios/**/*.html"
         ]
       }
     },
