--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -183,6 +183,7 @@
       "@angular-three/soba/abstractions": [
         "packages/soba/abstractions/src/index.ts"
       ],
+      "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
       "@angular-three/soba/shapes": ["packages/soba/shapes/src/index.ts"]
     }
