--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@nrwl/eslint-plugin-nx": "13.2.2",
     "@nrwl/jest": "13.2.2",
     "@nrwl/linter": "13.2.2",
+    "@nrwl/storybook": "13.2.2",
     "@nrwl/tao": "13.2.2",
     "@nrwl/workspace": "13.2.2",
     "@release-it/bumper": "3.0.1",
