feat(storybook): add storyboo

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.0.3",
     "@angular/compiler-cli": "13.0.2",
     "@angular/language-service": "13.0.2",
     "@nrwl/angular": "13.2.2",
@@ -60,6 +61,11 @@
     "@nrwl/workspace": "13.2.2",
     "@release-it/bumper": "3.0.1",
     "@release-it/conventional-changelog": "3.3.0",
+    "@storybook/addon-essentials": "~6.4.0-rc.3",
+    "@storybook/angular": "~6.4.0-rc.3",
+    "@storybook/builder-webpack5": "~6.4.0-rc.3",
+    "@storybook/manager-webpack5": "~6.4.0-rc.3",
+    "@types/highlight.js": "10.1.0",
     "@types/jest": "27.0.3",
     "@types/node": "16.11.9",
     "@types/three": "0.134.0",
