--- a/packages/postprocessing/tsconfig.lib.json
+++ b/packages/postprocessing/tsconfig.lib.json
@@ -9,12 +9,6 @@
     "types": [],
     "lib": ["dom", "es2018"]
   },
-  "exclude": [
-    "src/test-setup.ts",
-    "**/*.spec.ts",
-    "**/*.test.ts",
-    "**/*.stories.ts",
-    "**/*.stories.js"
-  ],
+  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
