--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -39,7 +39,9 @@
           "packages/soba/loaders/**/*.ts",
           "packages/soba/loaders/**/*.html",
           "packages/soba/cameras/**/*.ts",
-          "packages/soba/cameras/**/*.html"
+          "packages/soba/cameras/**/*.html",
+          "packages/soba/controls/**/*.ts",
+          "packages/soba/controls/**/*.html"
         ]
       }
     },
