--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -184,6 +184,7 @@
         "packages/soba/abstractions/src/index.ts"
       ],
       "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
+      "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
       "@angular-three/soba/shapes": ["packages/soba/shapes/src/index.ts"],
       "@angular-three/storybook": ["packages/storybook/src/index.ts"]
