--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@nrwl/tao": "13.2.3",
+    "@nrwl/angular": "13.2.3",
     "@nrwl/cli": "13.2.3",
+    "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
     "@types/node": "14.14.33",
-    "typescript": "~4.4.3",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "~4.4.3"
   }
 }
