--- a/package.json
+++ b/package.json
@@ -2,16 +2,53 @@
   "name": "angular-three",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "ngcc --properties es2015 browser module main"
+  },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "^13.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@angular/forms": "^13.0.0",
+    "@angular/platform-browser": "^13.0.0",
+    "@angular/platform-browser-dynamic": "^13.0.0",
+    "@angular/router": "^13.0.0",
+    "rxjs": "~7.4.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
+  },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~13.0.0",
+    "@angular-eslint/eslint-plugin": "~12.6.0",
+    "@angular-eslint/eslint-plugin-template": "~12.6.0",
+    "@angular-eslint/template-parser": "~12.6.0",
+    "@angular/cli": "~13.0.0",
+    "@angular/compiler-cli": "^13.0.0",
+    "@angular/language-service": "^13.0.0",
     "@nrwl/angular": "13.2.3",
     "@nrwl/cli": "13.2.3",
+    "@nrwl/eslint-plugin-nx": "13.2.3",
+    "@nrwl/jest": "13.2.3",
+    "@nrwl/linter": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "~4.33.0",
+    "@typescript-eslint/parser": "~4.33.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "27.2.3",
+    "jest-preset-angular": "11.0.0",
+    "ng-packagr": "^13.0.0",
+    "postcss": "^8.3.9",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "^2.3.1",
+    "ts-jest": "27.0.5",
     "typescript": "~4.4.3"
   }
 }
