--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@angular/platform-browser": "^13.0.0",
     "@angular/platform-browser-dynamic": "^13.0.0",
     "@angular/router": "^13.0.0",
+    "@ngrx/component-store": "13.0.1",
     "rxjs": "~7.4.0",
+    "three": "0.134.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
@@ -36,6 +38,7 @@
     "@nrwl/workspace": "13.2.3",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
+    "@types/three": "0.134.0",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
     "eslint": "7.32.0",
