chore: adjust ng versions

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.0.0",
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0",
-    "@angular/router": "^13.0.0",
+    "@angular/animations": "~13.0.2",
+    "@angular/common": "~13.0.2",
+    "@angular/compiler": "~13.0.2",
+    "@angular/core": "~13.0.2",
+    "@angular/forms": "~13.0.2",
+    "@angular/platform-browser": "~13.0.2",
+    "@angular/platform-browser-dynamic": "~13.0.2",
+    "@angular/router": "~13.0.2",
     "@ngrx/component-store": "13.0.1",
     "rxjs": "~7.4.0",
     "three": "0.134.0",
@@ -26,9 +26,9 @@
     "@angular-eslint/eslint-plugin": "~12.6.0",
     "@angular-eslint/eslint-plugin-template": "~12.6.0",
     "@angular-eslint/template-parser": "~12.6.0",
-    "@angular/cli": "~13.0.0",
-    "@angular/compiler-cli": "^13.0.0",
-    "@angular/language-service": "^13.0.0",
+    "@angular/cli": "~13.0.3",
+    "@angular/compiler-cli": "~13.0.2",
+    "@angular/language-service": "~13.0.2",
     "@nrwl/angular": "13.2.3",
     "@nrwl/cli": "13.2.3",
     "@nrwl/eslint-plugin-nx": "13.2.3",
@@ -45,7 +45,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
-    "ng-packagr": "^13.0.0",
+    "ng-packagr": "~13.0.8",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
